# newsinperspective

./: .env.example  .gitignore  CLAUDE.md  LEGACY.md  README.md  TODO.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/config/: env.ts
apps/api/src/domain/: entity-types.ts  types.ts
apps/api/src/lib/: language-check.ts  llm-trace.ts  process-lock.ts  runtime-date.ts
apps/api/src/routes/: api.ts  internal.ts
apps/api/src/scripts/: _status-today.ts  _test-cluster-titles.ts  _test-counts.ts  _test-fallback.ts  _test-fingerprint.ts  _test-link-fix.ts  _test-resolver.ts  _test-source-country.ts  _test-translate-brent.ts  _test-truncation-impact.ts  backfill-article-redirects.ts  backfill-signatures.ts  build-corpus-stopwords.ts  cluster-perspective-backfill.ts  cluster-perspective-clean-narratives.ts  cluster-perspective.ts  ingest.ts  (+21 more)
apps/api/test/: cluster-translate-titles-llm.test.ts  entity-linker.test.ts  openrouter-article-enrichment.test.ts  openrouter-models.test.ts  runtime-date.test.ts  source-profile-wikidata.test.ts
apps/ner/: Dockerfile  README.md  main.py  requirements.txt
apps/perspective/: README.md  app.py  package.json  pyproject.toml
apps/perspective/data/: corpus-stopwords.json
apps/web/: tsconfig.json
apps/web/src/: App.svelte
apps/web/test/: perspective-picker.test.ts
docs/: ingestion-architecture.md
notebook-input/: NiP_Perspective_Intelligence_v3.ipynb  nlp_analysis_myeongjin.ipynb
notebooks/: nlp_analysis.ipynb
scripts/: run-pipeline.sh
(+42 files in other folders)
